--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,11 @@
     "autoload": {
         "psr-0": {
             "": "src/"
-        }
+        },
+        "classmap": [
+            "app/AppKernel.php",
+            "app/AppCache.php"
+        ]
     },
     "require": {
         "php": ">=5.3.3",
@@ -13,11 +17,11 @@
         "doctrine/orm": "~2.2,>=2.2.3,<2.5",
         "doctrine/dbal": "<2.5",
         "doctrine/doctrine-bundle": "~1.2",
-        "twig/extensions": "1.0.*",
-        "symfony/assetic-bundle": "~2.3",
+        "twig/extensions": "1.5.*",
+        "symfony/assetic-bundle": "~2.6",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "~2.3",
+        "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "sensio/generator-bundle": "~2.3",
         "incenteev/composer-parameter-handler": "~2.0",
@@ -25,7 +29,8 @@
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "doctrine/data-fixtures": "@dev",
         "coresphere/console-bundle": "dev-master",
-        "liip/imagine-bundle": "^1.9"
+        "liip/imagine-bundle": "^1.9",
+        "kriswallsmith/assetic": "^1.4"
     },
     "scripts": {
         "post-install-cmd": [
