Remove app submodule

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-/app/bootstrap.php.cache
+/app/bootstrap*
 /app/cache/*
 !app/cache/.gitkeep
 /app/config/parameters.yml
 /app/logs/*
 !app/logs/.gitkeep
-/app/phpunit.xml
+/app/phpunit.xml*
 /bin/
 /composer.phar
 /vendor/
 /web/bundles/
 /log/*
+gitignore.txt
