--- a/.project
+++ b/.project
@@ -42,4 +42,15 @@
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 		<nature>com.dubture.doctrine.core.doctrineNature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1510068526438</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*app\cache*</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
