--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -30,7 +30,7 @@ security:
                 path:       logout
                 target:     /
             remember_me:
-                key:        %secret% #paramètre de parameters.yml
+                secret:     %secret% #paramètre de parameters.yml
 
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
