--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -35,4 +35,5 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/welcome, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/community, roles: IS_AUTHENTICATED_FULLY }
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
