--- a/composer.json
+++ b/composer.json
@@ -13,24 +13,23 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.8.*",
-        "doctrine/orm": "~2.2,>=2.2.3,<2.5",
-        "doctrine/dbal": "<2.5",
-        "doctrine/doctrine-bundle": "~1.2",
+        "symfony/symfony": "~3.0",
+        "doctrine/orm": "~2.4",
+        "doctrine/dbal": "^2.5",
+        "doctrine/doctrine-bundle": "^1.9",
         "twig/extensions": "1.5.*",
-        "symfony/assetic-bundle": "~2.6",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
-        "sensio/generator-bundle": "~2.3",
         "incenteev/composer-parameter-handler": "~2.0",
         "jms/security-extra-bundle": "dev-master",
-        "doctrine/doctrine-fixtures-bundle": "dev-master",
+        "doctrine/doctrine-fixtures-bundle": "*",
         "doctrine/data-fixtures": "@dev",
         "coresphere/console-bundle": "dev-master",
         "liip/imagine-bundle": "^1.9",
-        "kriswallsmith/assetic": "^1.4"
+        "kriswallsmith/assetic": "^1.4",
+        "symfony/webpack-encore-pack": "^1.0"
     },
     "scripts": {
         "post-install-cmd": [
