[Fix] Liip Imagine Bundle locator filesystem_insecure

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,13 +74,16 @@ liip_imagine:
     resolvers:
         default:
             web_path:
-                web_root: %kernel.root_dir%/../web
+                web_root: "%kernel.root_dir%/../web"
                 cache_prefix: media/cache
 
     loaders:
         default:
             filesystem:
-                data_root: %kernel.root_dir%/../web/
+                locator: filesystem_insecure
+                # data_root:
+                    # - "%kernel.root_dir%/../web/"
+                    # - "/home/footxfrsil/shared/web"
 
     filter_sets:
         cache: ~
