[ENH] New view to display & edit community information

--- a/src/foot5x5/MainBundle/Resources/config/routing.yml
+++ b/src/foot5x5/MainBundle/Resources/config/routing.yml
@@ -41,6 +41,11 @@ community_home:
     defaults:
         _controller: foot5x5MainBundle:Community:home
 
+community_info:
+    path:     /community/info
+    defaults:
+        _controller: foot5x5MainBundle:Community:info
+
 myprofile:
     path:     /profile
     defaults:
