--- a/src/foot5x5/MainBundle/Resources/config/routing.yml
+++ b/src/foot5x5/MainBundle/Resources/config/routing.yml
@@ -21,10 +21,10 @@ welcome:
     defaults:
         _controller: foot5x5MainBundle:Main:welcome
 
-# create_community:
-#    path:     /community/create
-#    defaults:
-#        _controller: foot5x5MainBundle:Community:create
+create_community:
+    path:     /community/create
+    defaults:
+        _controller: foot5x5MainBundle:Community:create
 
 join_community:
     path:     /community/join
@@ -100,6 +100,11 @@ finances:
     path:     /community/finances
     defaults:
         _controller: foot5x5MainBundle:Community:finances
+
+stats:
+    path:     /community/stats
+    defaults:
+        _controller: foot5x5MainBundle:Community:stats
 
 admin_home:
     path:     /admin
